Updated all files

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <div id="top">
+    <!--- Top - Navigation Bar -->
+    <div>
         <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
             <!-- Brand/logo -->
             <a class="navbar-brand" href="#">
@@ -39,45 +40,44 @@
                   </li>  
               </ul>
           </nav>
-        
-
-        <!-- 
-        <a href="index.html">Home</a>
-        <a href="education.html">Education</a>
-        <a href="skills.html">Skills</a>
-        <a href="experience.html">Experience</a>
-        -->
-    </div>
-    <div id="middle">
+        </div>
+    <!-- Middle - Container -->
         <div class="container">
             <div class="row">
-                <div class="col home">
+                <div class="col">
                     <h3>I am</h3>
                     <h1>Allan Campos</h1>
-                    <h2>Oracle DBA/Developer</h2>
+                    <h2>Developer/Design</h2>
+                     Dublin, Ireland
                 </div>
-                <div class="col home">
+                <div class="col">
                     <div class="myimg">
                         <img class="img" src="img/allan.jpg">
                         <br><br>
                         About me
                     </div>
-                    <br>
-                    <p>
+                    <div>
+                        <br>
+                        <p>
                         Professional with 2 years and a half experience in the field of Information Technology in search 
                        of growth and improvement in the technological practices.</br></br> 
                         Has an IT certification, Oracle Database 12c: Fundamentals of SQL - Exam 1Z0-061.
                        Graduate in Computer Science at the Federal University of Maranhão - UFMA
-                    </p>
+                        </p>
+                    </div>
+                    <div id="button-section">
+                        <button type="button" class="button-resume"><a href="file/Allan_Campos_original.pdf" class="link" download="resume" target="_blank">Get resume</a></button>
+                    </div> 
                 </div>
             </div>
             
         </div>
 
     </div>
-    <div id="bottom">
+    <!-- Bottom - Footer -->
+    <div>
         <footer>
-            ©️ 2020 Allan Campos
+            ©️2020 Allan Campos
         </footer>
     </div>
 
