--- a/skills.html
+++ b/skills.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 </head>
-<body>
+<body class="body-override">
     <!--- Top - Navigation Bar -->
     <div>
         <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
@@ -33,7 +33,10 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="experience.html">Experience</a>
-                  </li>  
+                  </li>
+                  <li class="nav-item ">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
               </ul>
           </nav>
     </div>
